# acodet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .~lock.hourly_presence.csv#  EL1.csv  LICENSE  README.md  advanced_config.yml  annotate.py  bactivate  combine_annotations.py  combine_annots.py  create_tfrecords.py  create_tfrecs.py  evaluate.py  evaluate_Gmodel.py  evaluate_model.py  gen_prdiction_annotations.py  gen_prediction_annotations.py  hourly_presence.csv  hourly_presence.py  main.py  migrate.py  migrate_to_tf220.py  narw.kt  outputs.py  pyproject.toml  requirements.txt  requirements3.11.txt  requirements3.11_windows.txt  requirements_acopipe.txt  requirements_lean.txt  requirements_m1.txt  requirements_vincent.txt  run.py  run_hbdet.py  run_model.sh  setup.py  simple_config.yml  split_daily_annots.py  (+7 more)
AcoDet/: annotate.py  augmentation.py  combine_annotations.py  create_session_file.py  evaluate.py  global_config.py  hourly_presence.py  models.py  train.py
acodet/: annotate.py  annotation_mappers.json  augmentation.py  combine_annotations.py  create_session_file.py  evaluate.py  funcs.py  global_config.py  hourly_presence.py  models.py  plot_utils.py  saveing.py  split_daily_annots.py  tf_dataloader.py  tfrec.py  torch_augment.py  torch_data.py  torch_eval.py  torch_train.py  torchmodels.py  train.py  transfer_weights.py
hbdet/: annotate.py  augmentation.py  combine_annotations.py  combine_annots.py  config.yml  evaluate.py  funcs.py  get_dataset_sizes.py  global_config.py  google_funcs.py  hourly_presence.py  hump_spot_funcs.py  models.py  tfrec.py  (+5 more)
(+553 files in other folders)
