[project]
name = "acodet"
version = "0.1.0"
description = "Automatic detection of vocalizing animals in acoustic datasets."
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "apache-beam",
    # "bacpipe",
    "einops",
    "flax",
    "gdown",
    "httpx",
    "importlib-resources",
    "kagglehub",
    "keras-cv",
    "librosa",
    "ml-collections",
    "numba",
    "panel",
    "plotly",
    "pysocks",
    "pytest",
    "seaborn",
    "sounddevice",
    "streamlit",
    "tensorflow; sys_platform != 'linux' and sys_platform != 'darwin'",
    "tensorflow[and-cuda]; sys_platform == 'linux'",  # GPU is only supported on Linux.
    "tensorflow<=2.19.1; sys_platform == 'darwin'",  # Apple has a custom TF plugin, but is broken in TF 2.20.
    "tensorflow-metal; sys_platform == 'darwin'",
    "tensorflow-hub",
    "tensorflow-io",
    "timm",
    "torch",
    "torchaudio",
    "torchcodec",
    "torchvision",
    "transformers",
    "umap-learn",
    "uvicorn",
    "uvloop; sys_platform != 'win32'",
    "zipp",
]
